--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <title>JP Pokedex</title>
 
     <!-- Normalize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -23,7 +23,11 @@
 </head>
 
 <body>
-    <section class="content">
+    <section id="pokemon-detail" class="content turnoff">
+
+    </section>
+
+    <section id="pokedex" class="content">
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
@@ -36,6 +40,7 @@
             </button>
         </div>
     </section>
+
 
     <!-- Nosso JS -->
     <script src="/assets/js/pokemon-model.js"></script>
